--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -46,17 +46,17 @@ Participating in {{experiment.status_line}}
 {% endblock %}
 {% block content %}
 <h3>Forestry round number {{ experiment.current_round.round_number }}</h3>
-<div style="background: url('/static/images/forestry/{{tree.name}}.png'); width:{{max_width}}px; height: {{max_height}}px;">
+<div style="background: url('{{STATIC_URL}}images/forestry/{{tree.name}}.png'); width:{{max_width}}px; height: {{max_height}}px;">
     &nbsp;
 </div>
 {% if resource_width > 0 %}
-<div style="background: url('/static/images/forestry/pine-tree.png') repeat-x; width:{{resource_width}}px; height: {{tree.height}}px;">
+<div style="background: url('{{STATIC_URL}}images/forestry/pine-tree.png') repeat-x; width:{{resource_width}}px; height: {{tree.height}}px;">
     &nbsp;
 </div>
 {% endif %}
 
 {% if resource_level.value == 0 %}
-<div style='padding: 8px; margin: auto; border: solid 1px; background: #E8E8E8 url(/static/images/forestry/deforestation.jpg) no-repeat center; height: 282px; width:425px;'>
+<div style='padding: 8px; margin: auto; border: solid 1px; background: #E8E8E8 url({{STATIC_URL}}images/forestry/deforestation.jpg) no-repeat center; height: 282px; width:425px;'>
     &nbsp;
 </div>
 {% endif %}
