--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -46,21 +46,21 @@ FIXME: replace these links eventually.
     <div class='notice ui-corner-all'>
         {{e.status_line}} <span style='padding: 3px;' class='ui-state-highlight'><b>{{e.participants.count}} registered participants</b></span>
         <ul class='horizontal experiment-menu'>
-            <li><a title='Monitor and control this experiment' href='{{e.monitor_url}}'><img src='/static/images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
-            <li><a class='confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.' href='{{e.clone_url}}'><img src='/static/images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
+            <li><a title='Monitor and control this experiment' href='{{e.monitor_url}}'><img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
+            <li><a class='confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.' href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
             {% if e.participants.count == 0  %}
             <li>
-            <a title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='/static/images/famfamfam/group_add.png' alt='register'/> register participants by email</a>
+            <a title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants by email</a>
             </li>
             <li>
-            <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' href='{{e.controller_url}}/register-simple'><img src='/static/images/famfamfam/group_add.png' alt='register'/> register example participants</a>
+            <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' href='{{e.controller_url}}/register-simple'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register example participants</a>
             </li>
             {% else %}
-            <li><a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='confirm-experiment-action'><img src='/static/images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
+            <li><a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
             {% endif %}
-            <!-- <li><a href='{{e.management_url}}'><img src='/static/images/famfamfam/application_go.png' alt='Custom management interface'/> manage (unfinished)</a></li> -->
+            <!-- <li><a href='{{e.management_url}}'><img src='{{STATIC_URL}}images/famfamfam/application_go.png' alt='Custom management interface'/> manage (unfinished)</a></li> -->
             {% if e.is_active %}
-            <li><a title='stop this experiment' href='{{e.stop_url}}' class='confirm-experiment-action'><img src='/static/images/famfamfam/stop.png' alt=''/> stop</a></li>
+            <li><a title='stop this experiment' href='{{e.stop_url}}' class='confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/stop.png' alt=''/> stop</a></li>
             {% endif %}
         </ul>
     </div>
