--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -18,9 +18,10 @@
         {% dajaxice_js_import %}
         <!-- <script type='/text/javascript' src='{{STATIC_URL}}js/dajaxice.core.js'></script> -->
         <script type='text/javascript'>
-            <!-- sets all external links to open up in new windows -->
+            <!-- sets all external links to open up in new windows and jquery-ui buttonifies all buttons-->
             $(function() {
                 $('a.external').attr({ target: "_blank" });
+                $('button').button();
             });
         </script>
         {% endblock %}
