--- a/vcweb/core/templates/participant/base.html
+++ b/vcweb/core/templates/participant/base.html
@@ -7,15 +7,18 @@
     {% include "includes/participant.events.html" %}
     {% include "includes/socket.io.html" %}
     <script type='text/javascript'>
+        var qtipOptions = {position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'green', tip: 'bottomMiddle'} };
         connect(window.location.hostname, 8888, 'participant/{{participant_experiment_relationship.pk}}');
+        $(function() {
+            $('[title]').qtip(qtipOptions);
+        });
+</script>
     </script>
     {% endblock %}
 {% endblock %}
-
 {% block title %}
     Virtual Commons Web Participant Interface
 {% endblock %}
-
 {% block header %}
     {% include "includes/participant-nav-menu.html" %}
 {% endblock %}
