missing semicolon from WEB_SOCKET_SWF_LOCATION, hopefully that fixes the websocket issues on vcweb.asu.edu

--- a/vcweb/core/templates/includes/socket.io.html
+++ b/vcweb/core/templates/includes/socket.io.html
@@ -1,6 +1,6 @@
-<script type="text/javascript" src="/static/js/socket.io.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/socket.io.min.js"></script>
 <script type="text/javascript">
-    WEB_SOCKET_SWF_LOCATION="/static/flash/WebSocketMain.swf"
+    WEB_SOCKET_SWF_LOCATION="{{STATIC_URL}}flash/WebSocketMain.swf";
 </script>
 
 <script type="text/javascript">
