--- a/vcweb/core/templates/includes/jquery.confirm.html
+++ b/vcweb/core/templates/includes/jquery.confirm.html
@@ -1,2 +1,2 @@
-<link href="/static/css/jquery.fastconfirm.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="/static/js/jquery.fastconfirm.min.js"></script>
+<link href="{{STATIC_URL}}css/jquery.fastconfirm.css" rel="stylesheet" type="text/css" media="screen" />
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery.fastconfirm.min.js"></script>
