--- a/vcweb/core/templates/includes/jquery.forms.html
+++ b/vcweb/core/templates/includes/jquery.forms.html
@@ -1,1 +1,1 @@
-<script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
+<script type='text/javascript' src='{{STATIC_URL}}js/jquery.validate.min.js'></script>
