--- a/vcweb/static/css/tablesorter/style.css
+++ b/vcweb/static/css/tablesorter/style.css
@@ -14,7 +14,7 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
     padding: 6px;
 }
 table.tablesorter thead tr .header {
-    background-image: url(/static/css/tablesorter/bg.gif);
+    background-image: url(bg.gif);
     background-repeat: no-repeat;
     background-position: center right;
     cursor: pointer;
@@ -31,10 +31,10 @@ table.tablesorter tbody tr.odd td {
     background-color:#F0F0F6;
 }
 table.tablesorter thead tr .headerSortUp {
-    background-image: url(/static/css/tablesorter/asc.gif);
+    background-image: url(asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
-    background-image: url(/static/css/tablesorter/desc.gif);
+    background-image: url(desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
     background-color: #8dbdd8;
