re-adding configurable socket_io_port in Django settings and pushing window.location.hostname into socket.io.html
duplicate log messages and other minor fixes

--HG--
rename : vcweb/vcweb-tornadio.py => vcweb/vcwebio.py

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -60,7 +60,7 @@
             registerCallbacks({{ experiment.round_data.count }}, {{ experiment.current_round.sequence_number }});
             // socket.io connection
             // FIXME: add auth
-            var s = connect(window.location.hostname, 8888, 'experimenter/{{request.user.experimenter.pk}}');
+            var s = connect('experimenter/{{request.user.experimenter.pk}}');
             s.on('message', function(json_string) {
                 console.log("Received message: " + json_string);
                 var json = jQuery.parseJSON(json_string);
