typo on dajaxice.core.js import

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -18,7 +18,7 @@
         {% load dajaxice_templatetags %}
         {% dajaxice_js_import %}
         {% else %}
-        <script type='/text/javascript' src='{{STATIC_URL}}js/dajaxice.core.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/dajaxice.core.js' charset='utf-8'></script>
         {% endif %}
         <script type='text/javascript'>
             <!-- sets all external links to open up in new windows and jquery-ui buttonifies all buttons-->
