updating actions available in wait page to just return to the participation page and changing ParameterizedValue.string_value to a TextField; consider adding an additional field json_value that stores arbitrary JSON-encoded strings (or just use the string_value for that as well)

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -76,6 +76,10 @@ li.warning {
 .float-right {
     float:right;
 }
+.vcweb-ui-icon {
+    display:inline;
+    margin: 7px;
+}
 .vcweb-icon {
     display:inline;
     background-repeat: no-repeat;
