--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -38,10 +38,9 @@ Forestry Experiment Round {{ experiment.current_round.round_number }}
 <p>
 The facilitator will start the next round when every participant is ready.
 <br/>
-<span class='ui-state-highlight ui-corner-all'>
-    <small><a class='contactIcon' href="#">send a private message to the facilitator</a>
-        | <a href='participate'>return to participation page</a></small>
-</span>
+<div class='ui-state-highlight ui-corner-all'>
+    <small><span class='float-left vcweb-ui-icon ui-icon ui-icon-circle-arrow-w'></span><a href='participate'>return to participation page</a></small>
+</div>
 <br/>
 </p>
 
