switching back to 0.6.2 socket.io.min.js

--- a/vcweb/core/templates/includes/socket.io.html
+++ b/vcweb/core/templates/includes/socket.io.html
@@ -4,6 +4,7 @@
 </script>
 
 <script type="text/javascript">
+var vcwebSocket = {};
 var cachedSocket;
 var defaultPort = 8881;
 function connect(resource) {
@@ -17,17 +18,21 @@ function connect(resource) {
         console.log("using default port: " + defaultPort);
         port = defaultPort;
     }
-    cachedSocket = new io.Socket(host, {"port": port,  "resource": resource});
+    console.log("Establishing connection to " + host + ":" + port + "/" + resource);
+    cachedSocket = new io.Socket(host, {port: port, resource: resource});
     cachedSocket.connect();
+    console.log("connect invoked to " + host + ":" + port + "/" + resource);
     cachedSocket.on('connect', function() {
-        console.log("Connecting to " + host + ":" + port + "/" + resource);
+        console.debug("onconnect to " + host + ":" + port + "/" + resource);
         cachedSocket.send(createConnectionEvent());
     });
+    /*
     cachedSocket.on('disconnect', function(data) {
         console.log("received disconnect, reconnecting.");
         cachedSocket.connect();
         cachedSocket.send(createReconnectionEvent());
     });
+    */
     return cachedSocket;
 }
 function getCachedSocket() {
