--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -19,10 +19,10 @@ function createMessageEvent(payload, event_type) {
       "message": payload
    };
 }
-function createChatEvent(message) {
-   return createMessageEvent(message);
+function createChatEvent(payload) {
+   return createMessageEvent(payload);
 }
-function createSubmitEvent(message) {
-    return createMessageEvent(message, "submit");
+function createSubmitEvent(payload) {
+    return createMessageEvent(payload, "submit");
 }
 </script>
