fixes issue 12 and issue 10

--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -33,9 +33,10 @@
             }
         });
         $('#forestry-form').submit(function() {
-            $('#submit').prop("disabled", true);
+            $('#submit').button("disable");
             var harvestDecisionValue = $('#harvest-decision-id').val();
-            // FIXME: this isn't getting sent through properly before the submit occurs.
+            // FIXME: this isn't getting sent through properly before the submit occurs.  
+            // Should work out communicating directly from Django to the tornadio process.
             s.send(createSubmitEvent(harvestDecisionValue));
             return true;
         });
