--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -49,11 +49,15 @@ Forestry Chat Round
 
 {% block page %}
 <h3>Chat</h3>
-    <div class='info ui-corner-all'>
-        <span class='icon-left ui-icon ui-icon-info'></span>
-        <b>
-            Hello, {{participant.full_name}}.
-            You are participant {{ participant_group_relationship.participant_number }} in {{participant_group_relationship.group}}.
+    <div class='alert infoIcon ui-corner-all'>
+            You are <b>participant {{ participant_group_relationship.participant_number }}.</b>
+            You can now chat about any aspect of the experiment with the other members of your group with two restrictions:
+            <ol>
+            <li>You cannot promise side payments after the experiment is completed 
+            <li>You cannot threaten any member of your group with any consequences after the experiment is completed
+            </ol>
+            We are monitoring the chat traffic and if we detect any violation
+            of these rules you will be removed from the experiment.
         </b>
     </div>
     <div id='chat-div' class='chat notice ui-corner-all'>
