getting rid of submit disable; validation failure disables the button and then there's no way to submit

--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -44,11 +44,11 @@
 </script>
 {% endblock %}
 {% block title %}
-Forestry Chat Round
+Forestry Communication Round
 {% endblock %}
 
 {% block page %}
-<h3>Chat</h3>
+<h3>Communication Round</h3>
     <div class='alert infoIcon ui-corner-all'>
             You are <b>participant {{ participant_group_relationship.participant_number }}.</b>
             You can now chat about any aspect of the experiment with the other members of your group with two restrictions:
