minor UI tweaks for chat page

--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -44,15 +44,15 @@
 </script>
 {% endblock %}
 {% block title %}
-Forestry Communication Round
+Communication Round: {{experiment}}
 {% endblock %}
 
 {% block page %}
-<h3>Communication Round</h3>
-    <div class='alert infoIcon ui-corner-all'>
+<h3 style='margin-top: -30px;'>Communication Round Instructions</h3>
+    <div class='alert alertIcon ui-corner-all' style='font-size: 0.8em; line-height: 1.0em;'>
             You are <b>participant {{ participant_group_relationship.participant_number }}.</b>
-            You can now chat about any aspect of the experiment with the other members of your group with two restrictions:
-            <ol>
+            You can chat about any aspect of the experiment with the other members of your group with two restrictions:
+            <ol style='margin-left: 15px;margin-bottom: 0;'>
             <li>You cannot promise side payments after the experiment is completed 
             <li>You cannot threaten any member of your group with any consequences after the experiment is completed
             </ol>
